# Team-Legend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: verify.yaml
todo/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todo/templates/todo/: login.html  main.html  register.html  reset-password.html  task.html  task_confirm_delete.html  task_form.html  task_list.html  user-info.html
todolistprj/: asgi.py  settings.py  urls.py  wsgi.py
